<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/movie_pic"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/movie_name"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toStartOf="@id/certification_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_pic" />

    <ImageView
        android:id="@+id/certification_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/baseline_block_24"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="@+id/movie_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/movie_name"
        app:layout_constraintTop_toTopOf="@+id/movie_name" />

    <TextView
        android:id="@+id/movie_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_name"
        tools:text="Decent text goes here" />

    <TextView
        android:id="@+id/starring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starring"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_information" />

    <TextView
        android:id="@+id/cast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tom_holland_mark_wahlberg_antonio_banderas"
        android:textSize="16sp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/starring"
        app:layout_constraintTop_toTopOf="@+id/starring" />

    <TextView
        android:id="@+id/running_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/running_time"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cast" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1hr_56mins"
        android:textSize="16sp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintBottom_toBottomOf="@id/running_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/running_time"
        app:layout_constraintTop_toTopOf="@+id/running_time" />

    <ImageView
        android:id="@+id/seat_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@drawable/baseline_chair_24"
        android:contentDescription="@string/seat_icon"
        app:layout_constraintBottom_toBottomOf="@+id/seats_number"
        app:layout_constraintEnd_toStartOf="@+id/seats_number"
        app:layout_constraintTop_toTopOf="@+id/seats_number" />

    <TextView
        android:id="@+id/seats_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/_5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/seats_text"
        app:layout_constraintEnd_toStartOf="@+id/seats_text"
        app:layout_constraintTop_toTopOf="@+id/seats_text" />

    <TextView
        android:id="@+id/seats_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seats_remaining"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/running_time" />

</androidx.constraintlayout.widget.ConstraintLayout>